--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>dice game</title>
   <link rel=stylesheet href="styles.css" />
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
-  <link type="image/png" sizes="16x16" rel="icon" href="../images/Web/icons8-triangular-flag-emoji-16.png">
+  <link type="image/png" sizes="16x16" rel="icon" href="images/Web/icons8-triangular-flag-emoji-16.png">
 </head>
 <body>
   <div class="row">
@@ -15,13 +15,13 @@
       <p>
         player 1
       </p>
-      <img src="../images/dice1.png" class="image1"/>
+      <img src="images/dice1.png" class="image1"/>
     </div>
     <div class="col">
       <p>
         player 2
       </p>
-      <img src="../images/dice2.png" class="image2"/>
+      <img src="images/dice2.png" class="image2"/>
     </div>
   </div>
 <script src="index.js"></script>
